nn_ns/using/using_PLY/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> GrammarB
Rule 1     GrammarB -> StatementStar
Rule 2     Statement -> AT_START_SYMBOL StartSymbol
Rule 3     Statement -> AT_TERMINALS BODY_BEGIN TerminalStar BODY_END
Rule 4     RuleBody -> RULE_BODY_BEGIN SymbolStar
Rule 5     Statement -> Nonterminal BODY_BEGIN RuleBodyStar BODY_END
Rule 6     StartSymbol -> Nonterminal
Rule 7     Nonterminal -> Symbol
Rule 8     Terminal -> Symbol
Rule 9     Symbol -> SYMBOL
Rule 10    StatementStar -> StatementCrossOption
Rule 11    SymbolStar -> SymbolCrossOption
Rule 12    TerminalStar -> TerminalCrossOption
Rule 13    RuleBodyStar -> RuleBodyCrossOption
Rule 14    StatementCross -> Statement StatementStar
Rule 15    SymbolCross -> Symbol SymbolStar
Rule 16    TerminalCross -> Terminal TerminalStar
Rule 17    RuleBodyCross -> RuleBody RuleBodyStar
Rule 18    StatementCrossOption -> StatementCross
Rule 19    StatementCrossOption -> Null
Rule 20    SymbolCrossOption -> SymbolCross
Rule 21    SymbolCrossOption -> Null
Rule 22    TerminalCrossOption -> TerminalCross
Rule 23    TerminalCrossOption -> Null
Rule 24    RuleBodyCrossOption -> RuleBodyCross
Rule 25    RuleBodyCrossOption -> Null
Rule 26    Null -> <empty>

Terminals, with rules where they appear

AT_START_SYMBOL      : 2
AT_TERMINALS         : 3
BODY_BEGIN           : 3 5
BODY_END             : 3 5
RULE_BODY_BEGIN      : 4
SYMBOL               : 9
error                : 

Nonterminals, with rules where they appear

GrammarB             : 0
Nonterminal          : 5 6
Null                 : 19 21 23 25
RuleBody             : 17
RuleBodyCross        : 24
RuleBodyCrossOption  : 13
RuleBodyStar         : 5 17
StartSymbol          : 2
Statement            : 14
StatementCross       : 18
StatementCrossOption : 10
StatementStar        : 1 14
Symbol               : 7 8 15
SymbolCross          : 20
SymbolCrossOption    : 11
SymbolStar           : 4 15
Terminal             : 16
TerminalCross        : 22
TerminalCrossOption  : 12
TerminalStar         : 3 16

Parsing method: LALR

state 0

    (0) S' -> . GrammarB
    (1) GrammarB -> . StatementStar
    (10) StatementStar -> . StatementCrossOption
    (18) StatementCrossOption -> . StatementCross
    (19) StatementCrossOption -> . Null
    (14) StatementCross -> . Statement StatementStar
    (26) Null -> .
    (2) Statement -> . AT_START_SYMBOL StartSymbol
    (3) Statement -> . AT_TERMINALS BODY_BEGIN TerminalStar BODY_END
    (5) Statement -> . Nonterminal BODY_BEGIN RuleBodyStar BODY_END
    (7) Nonterminal -> . Symbol
    (9) Symbol -> . SYMBOL

    $end            reduce using rule 26 (Null -> .)
    AT_START_SYMBOL shift and go to state 4
    AT_TERMINALS    shift and go to state 10
    SYMBOL          shift and go to state 3

    StatementCross                 shift and go to state 5
    StatementCrossOption           shift and go to state 1
    GrammarB                       shift and go to state 7
    Statement                      shift and go to state 6
    StatementStar                  shift and go to state 8
    Null                           shift and go to state 9
    Nonterminal                    shift and go to state 2
    Symbol                         shift and go to state 11

state 1

    (10) StatementStar -> StatementCrossOption .

    $end            reduce using rule 10 (StatementStar -> StatementCrossOption .)


state 2

    (5) Statement -> Nonterminal . BODY_BEGIN RuleBodyStar BODY_END

    BODY_BEGIN      shift and go to state 12


state 3

    (9) Symbol -> SYMBOL .

    SYMBOL          reduce using rule 9 (Symbol -> SYMBOL .)
    BODY_END        reduce using rule 9 (Symbol -> SYMBOL .)
    RULE_BODY_BEGIN reduce using rule 9 (Symbol -> SYMBOL .)
    AT_START_SYMBOL reduce using rule 9 (Symbol -> SYMBOL .)
    AT_TERMINALS    reduce using rule 9 (Symbol -> SYMBOL .)
    $end            reduce using rule 9 (Symbol -> SYMBOL .)
    BODY_BEGIN      reduce using rule 9 (Symbol -> SYMBOL .)


state 4

    (2) Statement -> AT_START_SYMBOL . StartSymbol
    (6) StartSymbol -> . Nonterminal
    (7) Nonterminal -> . Symbol
    (9) Symbol -> . SYMBOL

    SYMBOL          shift and go to state 3

    Nonterminal                    shift and go to state 14
    StartSymbol                    shift and go to state 13
    Symbol                         shift and go to state 11

state 5

    (18) StatementCrossOption -> StatementCross .

    $end            reduce using rule 18 (StatementCrossOption -> StatementCross .)


state 6

    (14) StatementCross -> Statement . StatementStar
    (10) StatementStar -> . StatementCrossOption
    (18) StatementCrossOption -> . StatementCross
    (19) StatementCrossOption -> . Null
    (14) StatementCross -> . Statement StatementStar
    (26) Null -> .
    (2) Statement -> . AT_START_SYMBOL StartSymbol
    (3) Statement -> . AT_TERMINALS BODY_BEGIN TerminalStar BODY_END
    (5) Statement -> . Nonterminal BODY_BEGIN RuleBodyStar BODY_END
    (7) Nonterminal -> . Symbol
    (9) Symbol -> . SYMBOL

    $end            reduce using rule 26 (Null -> .)
    AT_START_SYMBOL shift and go to state 4
    AT_TERMINALS    shift and go to state 10
    SYMBOL          shift and go to state 3

    StatementCross                 shift and go to state 5
    Statement                      shift and go to state 6
    StatementCrossOption           shift and go to state 1
    StatementStar                  shift and go to state 15
    Null                           shift and go to state 9
    Nonterminal                    shift and go to state 2
    Symbol                         shift and go to state 11

state 7

    (0) S' -> GrammarB .



state 8

    (1) GrammarB -> StatementStar .

    $end            reduce using rule 1 (GrammarB -> StatementStar .)


state 9

    (19) StatementCrossOption -> Null .

    $end            reduce using rule 19 (StatementCrossOption -> Null .)


state 10

    (3) Statement -> AT_TERMINALS . BODY_BEGIN TerminalStar BODY_END

    BODY_BEGIN      shift and go to state 16


state 11

    (7) Nonterminal -> Symbol .

    BODY_BEGIN      reduce using rule 7 (Nonterminal -> Symbol .)
    AT_START_SYMBOL reduce using rule 7 (Nonterminal -> Symbol .)
    AT_TERMINALS    reduce using rule 7 (Nonterminal -> Symbol .)
    SYMBOL          reduce using rule 7 (Nonterminal -> Symbol .)
    $end            reduce using rule 7 (Nonterminal -> Symbol .)


state 12

    (5) Statement -> Nonterminal BODY_BEGIN . RuleBodyStar BODY_END
    (13) RuleBodyStar -> . RuleBodyCrossOption
    (24) RuleBodyCrossOption -> . RuleBodyCross
    (25) RuleBodyCrossOption -> . Null
    (17) RuleBodyCross -> . RuleBody RuleBodyStar
    (26) Null -> .
    (4) RuleBody -> . RULE_BODY_BEGIN SymbolStar

    BODY_END        reduce using rule 26 (Null -> .)
    RULE_BODY_BEGIN shift and go to state 18

    RuleBodyCross                  shift and go to state 19
    RuleBodyStar                   shift and go to state 20
    RuleBodyCrossOption            shift and go to state 17
    RuleBody                       shift and go to state 21
    Null                           shift and go to state 22

state 13

    (2) Statement -> AT_START_SYMBOL StartSymbol .

    AT_START_SYMBOL reduce using rule 2 (Statement -> AT_START_SYMBOL StartSymbol .)
    AT_TERMINALS    reduce using rule 2 (Statement -> AT_START_SYMBOL StartSymbol .)
    SYMBOL          reduce using rule 2 (Statement -> AT_START_SYMBOL StartSymbol .)
    $end            reduce using rule 2 (Statement -> AT_START_SYMBOL StartSymbol .)


state 14

    (6) StartSymbol -> Nonterminal .

    AT_START_SYMBOL reduce using rule 6 (StartSymbol -> Nonterminal .)
    AT_TERMINALS    reduce using rule 6 (StartSymbol -> Nonterminal .)
    SYMBOL          reduce using rule 6 (StartSymbol -> Nonterminal .)
    $end            reduce using rule 6 (StartSymbol -> Nonterminal .)


state 15

    (14) StatementCross -> Statement StatementStar .

    $end            reduce using rule 14 (StatementCross -> Statement StatementStar .)


state 16

    (3) Statement -> AT_TERMINALS BODY_BEGIN . TerminalStar BODY_END
    (12) TerminalStar -> . TerminalCrossOption
    (22) TerminalCrossOption -> . TerminalCross
    (23) TerminalCrossOption -> . Null
    (16) TerminalCross -> . Terminal TerminalStar
    (26) Null -> .
    (8) Terminal -> . Symbol
    (9) Symbol -> . SYMBOL

    BODY_END        reduce using rule 26 (Null -> .)
    SYMBOL          shift and go to state 3

    TerminalCrossOption            shift and go to state 25
    Symbol                         shift and go to state 24
    Terminal                       shift and go to state 23
    TerminalCross                  shift and go to state 26
    TerminalStar                   shift and go to state 27
    Null                           shift and go to state 28

state 17

    (13) RuleBodyStar -> RuleBodyCrossOption .

    BODY_END        reduce using rule 13 (RuleBodyStar -> RuleBodyCrossOption .)


state 18

    (4) RuleBody -> RULE_BODY_BEGIN . SymbolStar
    (11) SymbolStar -> . SymbolCrossOption
    (20) SymbolCrossOption -> . SymbolCross
    (21) SymbolCrossOption -> . Null
    (15) SymbolCross -> . Symbol SymbolStar
    (26) Null -> .
    (9) Symbol -> . SYMBOL

    RULE_BODY_BEGIN reduce using rule 26 (Null -> .)
    BODY_END        reduce using rule 26 (Null -> .)
    SYMBOL          shift and go to state 3

    SymbolCross                    shift and go to state 29
    SymbolStar                     shift and go to state 32
    Null                           shift and go to state 33
    Symbol                         shift and go to state 30
    SymbolCrossOption              shift and go to state 31

state 19

    (24) RuleBodyCrossOption -> RuleBodyCross .

    BODY_END        reduce using rule 24 (RuleBodyCrossOption -> RuleBodyCross .)


state 20

    (5) Statement -> Nonterminal BODY_BEGIN RuleBodyStar . BODY_END

    BODY_END        shift and go to state 34


state 21

    (17) RuleBodyCross -> RuleBody . RuleBodyStar
    (13) RuleBodyStar -> . RuleBodyCrossOption
    (24) RuleBodyCrossOption -> . RuleBodyCross
    (25) RuleBodyCrossOption -> . Null
    (17) RuleBodyCross -> . RuleBody RuleBodyStar
    (26) Null -> .
    (4) RuleBody -> . RULE_BODY_BEGIN SymbolStar

    BODY_END        reduce using rule 26 (Null -> .)
    RULE_BODY_BEGIN shift and go to state 18

    RuleBody                       shift and go to state 21
    RuleBodyCross                  shift and go to state 19
    RuleBodyStar                   shift and go to state 35
    RuleBodyCrossOption            shift and go to state 17
    Null                           shift and go to state 22

state 22

    (25) RuleBodyCrossOption -> Null .

    BODY_END        reduce using rule 25 (RuleBodyCrossOption -> Null .)


state 23

    (16) TerminalCross -> Terminal . TerminalStar
    (12) TerminalStar -> . TerminalCrossOption
    (22) TerminalCrossOption -> . TerminalCross
    (23) TerminalCrossOption -> . Null
    (16) TerminalCross -> . Terminal TerminalStar
    (26) Null -> .
    (8) Terminal -> . Symbol
    (9) Symbol -> . SYMBOL

    BODY_END        reduce using rule 26 (Null -> .)
    SYMBOL          shift and go to state 3

    Terminal                       shift and go to state 23
    Symbol                         shift and go to state 24
    TerminalCrossOption            shift and go to state 25
    TerminalCross                  shift and go to state 26
    TerminalStar                   shift and go to state 36
    Null                           shift and go to state 28

state 24

    (8) Terminal -> Symbol .

    SYMBOL          reduce using rule 8 (Terminal -> Symbol .)
    BODY_END        reduce using rule 8 (Terminal -> Symbol .)


state 25

    (12) TerminalStar -> TerminalCrossOption .

    BODY_END        reduce using rule 12 (TerminalStar -> TerminalCrossOption .)


state 26

    (22) TerminalCrossOption -> TerminalCross .

    BODY_END        reduce using rule 22 (TerminalCrossOption -> TerminalCross .)


state 27

    (3) Statement -> AT_TERMINALS BODY_BEGIN TerminalStar . BODY_END

    BODY_END        shift and go to state 37


state 28

    (23) TerminalCrossOption -> Null .

    BODY_END        reduce using rule 23 (TerminalCrossOption -> Null .)


state 29

    (20) SymbolCrossOption -> SymbolCross .

    RULE_BODY_BEGIN reduce using rule 20 (SymbolCrossOption -> SymbolCross .)
    BODY_END        reduce using rule 20 (SymbolCrossOption -> SymbolCross .)


state 30

    (15) SymbolCross -> Symbol . SymbolStar
    (11) SymbolStar -> . SymbolCrossOption
    (20) SymbolCrossOption -> . SymbolCross
    (21) SymbolCrossOption -> . Null
    (15) SymbolCross -> . Symbol SymbolStar
    (26) Null -> .
    (9) Symbol -> . SYMBOL

    RULE_BODY_BEGIN reduce using rule 26 (Null -> .)
    BODY_END        reduce using rule 26 (Null -> .)
    SYMBOL          shift and go to state 3

    SymbolCross                    shift and go to state 29
    SymbolStar                     shift and go to state 38
    Null                           shift and go to state 33
    Symbol                         shift and go to state 30
    SymbolCrossOption              shift and go to state 31

state 31

    (11) SymbolStar -> SymbolCrossOption .

    RULE_BODY_BEGIN reduce using rule 11 (SymbolStar -> SymbolCrossOption .)
    BODY_END        reduce using rule 11 (SymbolStar -> SymbolCrossOption .)


state 32

    (4) RuleBody -> RULE_BODY_BEGIN SymbolStar .

    RULE_BODY_BEGIN reduce using rule 4 (RuleBody -> RULE_BODY_BEGIN SymbolStar .)
    BODY_END        reduce using rule 4 (RuleBody -> RULE_BODY_BEGIN SymbolStar .)


state 33

    (21) SymbolCrossOption -> Null .

    RULE_BODY_BEGIN reduce using rule 21 (SymbolCrossOption -> Null .)
    BODY_END        reduce using rule 21 (SymbolCrossOption -> Null .)


state 34

    (5) Statement -> Nonterminal BODY_BEGIN RuleBodyStar BODY_END .

    AT_START_SYMBOL reduce using rule 5 (Statement -> Nonterminal BODY_BEGIN RuleBodyStar BODY_END .)
    AT_TERMINALS    reduce using rule 5 (Statement -> Nonterminal BODY_BEGIN RuleBodyStar BODY_END .)
    SYMBOL          reduce using rule 5 (Statement -> Nonterminal BODY_BEGIN RuleBodyStar BODY_END .)
    $end            reduce using rule 5 (Statement -> Nonterminal BODY_BEGIN RuleBodyStar BODY_END .)


state 35

    (17) RuleBodyCross -> RuleBody RuleBodyStar .

    BODY_END        reduce using rule 17 (RuleBodyCross -> RuleBody RuleBodyStar .)


state 36

    (16) TerminalCross -> Terminal TerminalStar .

    BODY_END        reduce using rule 16 (TerminalCross -> Terminal TerminalStar .)


state 37

    (3) Statement -> AT_TERMINALS BODY_BEGIN TerminalStar BODY_END .

    AT_START_SYMBOL reduce using rule 3 (Statement -> AT_TERMINALS BODY_BEGIN TerminalStar BODY_END .)
    AT_TERMINALS    reduce using rule 3 (Statement -> AT_TERMINALS BODY_BEGIN TerminalStar BODY_END .)
    SYMBOL          reduce using rule 3 (Statement -> AT_TERMINALS BODY_BEGIN TerminalStar BODY_END .)
    $end            reduce using rule 3 (Statement -> AT_TERMINALS BODY_BEGIN TerminalStar BODY_END .)


state 38

    (15) SymbolCross -> Symbol SymbolStar .

    RULE_BODY_BEGIN reduce using rule 15 (SymbolCross -> Symbol SymbolStar .)
    BODY_END        reduce using rule 15 (SymbolCross -> Symbol SymbolStar .)

